# c_learn2

./: .gitignore  README.md
Client/: CMakeLists.txt  Lclient.cpp  UdpClient.cpp  a.out  client.cpp  epollServer.cpp  lqc@192.168.56.106  main.cpp
Csocket/: CMakeLists.txt  asio1.cpp  asio2.cpp  asioext1.cpp  asioext2.cpp  asionet.cpp  bufcs1.cpp  cs1.cpp  domaincs1cs1cli.cpp  domaincs1server.cpp  epoll1.cpp  epollet.cpp  iouring1.cpp  pfpacket1.cpp  poll1.cpp  propercs1.cpp  readme-csocket  sctpcs1cli.cpp  sctpcs1server.cpp  select1.cpp  select2.cpp  select3.cpp  stringcs1.cpp  structcs1.cpp  synflood.cpp  udp0.cpp  udp1.cpp  udp2.cpp
Kernel_List/: CMakeLists.txt  main.cpp
LNginx/: .gitignore  CMakeLists.txt  LLMap.cpp  a.out  epollServer.cpp  getIP.cpp  main.cpp  server2.cpp  socket.cpp
Memsplice/: CMakeLists.txt  main.cpp
SkipList/: CMakeLists.txt  main.cpp
Test/: CMakeLists.txt  main.cpp
Thread/: CMakeLists.txt  affinity1.cpp  affinity2.cpp  atomic1.cpp  attr.cpp  attr2.cpp  cppasync1.cpp  cppasync2.cpp  cppasync3.cpp  cppatomics1.cpp  cppcondvar1.cpp  cppcondvar2.cpp  cppmutex1.cpp  cpppromise1.cpp  cppsharedfuture1.cpp  cppthread1.cpp  readme-thread  sync1.cpp  sync2.cpp  sync3.cpp  sync4.cpp  sync5.cpp  sync6.cpp  sync7.cpp  sync8.cpp  thread1.cpp  thread2.cpp  thread3.cpp  thread4.cpp  thread5.cpp  threadlocal1.cpp  threadlocal2.cpp  timer1.cpp  timer2.cpp  volitaletest.cpp
boostthread/: CMakeLists.txt  bstmutex1.cpp  bstmutex2.cpp  bstmutex3.cpp  bstmutex4.cpp  bstshm1.cpp  bstshm2.cpp  bstshm3.cpp  bstshm4.cpp  mbstshm1.cpp  mbstshm2.cpp  mbstshm3.cpp  mbstshm4.cpp  mbstshm5.cpp  mbstshm6.cpp
cProcess/: CMakeLists.txt  daemon1.cpp  execve1.cpp  exitecho.cpp  fork1.cpp  forkshare.cpp  kill1.cpp  main.cpp  msg1.cpp  msg2.cpp  pipe1.cpp  pipe2.cpp  readme-cprocess  sem1.cpp  sem2.cpp  shm1.cpp  shm2.cpp  signal.txt  signal1.cpp  signal2.cpp  signal3.cpp  signal4.cpp  wait1.cpp  wait2.cpp  wait3.cpp
cio/: CMakeLists.txt  directopen1.cpp  dup.cpp  exit1.cpp  fcntl.cpp  fcntl2.cpp  fputcget.cpp  fputsfgets.cpp  freadfwrite.cpp  fseek1.cpp  hole.cpp  inode1.cpp  io1.cpp  ioctl1.cpp  ioother.cpp  madvise1.cpp  main.cpp  memalign1.cpp  mlock1.cpp  mmap.cpp  readme-cio  splice1.cpp  sysio.cpp  sysio2.cpp  sysstdio.cpp  tee1.cpp  zerocopy.cpp
clang/: CMakeLists.txt  Testh.cpp  Testh.h  define10.cpp  define10.h  define11.cpp  define12.cpp  define2.cpp  define3.cpp  define4.cpp  define5.cpp  define6.cpp  define7.cpp  define8.cpp  define9.cpp  enum.cpp  externc.cpp  func.cpp  func2.cpp  funcptr.cpp  funref.cpp  gnuext.cpp  main.cpp  ptr.cpp  readme-clang  ref.cpp  static.cpp  string.cpp  struts.cpp  struts2.cpp  struts3.cpp  struts4.cpp  template.cpp  tupe.cpp  union.cpp  union2.cpp  unionstruct.cpp
cluster2/: CMakeLists.txt  Lserver.cpp  main.cpp
collection/: CMakeLists.txt  main.cpp
cppio/: CMakeLists.txt  boostfs1.cpp  byteio1.cpp  byteio2.cpp  byteio3.cpp  byteio4.cpp  byteio5.cpp  byteio6.cpp  byteio7.cpp  byteio8.cpp  io1.cpp  io2.cpp  io3.cpp  io4.cpp  io5.cpp
cpplang/: CMakeLists.txt  bad_allocExp.cpp  classtest.cpp  classtest.h  classtest2.cpp  classtest3.cpp  classtest4.cpp  classtest5.cpp  classtest6.cpp  constructor.cpp  constructor2.cpp  constructor2.h  constructor3.cpp  constructor4.cpp  delete.cpp  discon.cpp  discon2.cpp  discon3.cpp  exceptiontest1.cpp  exceptiontest2.cpp  extends.cpp  extendsdiscon.cpp  extendsdiscon2.cpp  friend1.cpp  friend2.cpp  inline1.cpp  main.cpp  member.cpp  namespacetest.cpp  opt1.cpp  opt2.cpp  opt3.cpp  opt4.cpp  opt5.cpp  opt6.cpp  opt7.cpp  opt8.cpp  readme-cpplang  singleton.cpp  staticmember.cpp  (+10 more)
epollTest/: CMakeLists.txt  main.cpp
for_cluster/: CMakeLists.txt  Lserver.cpp  main.cpp
iowork/: CMakeLists.txt  file.cpp  file2.cpp  main.cpp  mutiThread.cpp  mysql.cpp
job/: CMakeLists.txt
jobs/: CMakeLists.txt  main.c
mutiExtend/: CMakeLists.txt  a.out  const.cpp  funcPtr.cpp  lamda.cpp  main.cpp  moveStruct.cpp  override.cpp  owner.cpp  thread.cpp  usingStruct.cpp
oo1/: CMakeLists.txt  library.h
oo2/: CMakeLists.txt  main.cpp
pcap/: CMakeLists.txt  main.cpp  mm  test.cpp
re-first/: CMakeLists.txt  main.c
smart_pointer/: CMakeLists.txt  main.cpp
syscall/: CMakeLists.txt  main.cpp
tcp&ucp/: CMakeLists.txt  main.cpp
telnet/: CMakeLists.txt  main.c  mt.h
writer/: CMakeLists.txt  main.cpp
ww/: CMakeLists.txt  main.c
